--- a/src/main/resources/templates/approveBudgetMailTemplate.html
+++ b/src/main/resources/templates/approveBudgetMailTemplate.html
@@ -49,7 +49,7 @@ th, td {
 <p><strong>Comment: </strong></p>
 <p th:text="${comment}"></p>
 <p><strong>Ticket Code: </strong></p>
-<a href="https://google.com" th:text="${ticket_code}" />
+<a th:href="${url}" th:text="${ticket_code}" />
 <p><strong>Request Item Id:</strong></p>
 <p th:text="${request_item_id}"></p>
 <p><strong>Created Date & Time:</strong> </p>
