added timer and send email

--- a/src/main/resources/templates/scheduledNotification.html
+++ b/src/main/resources/templates/scheduledNotification.html
@@ -7,17 +7,10 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<h3>Annual Self Assessment To Be Completed in 3 Days</h3>
+<h3>Please Complete the Annual Outsourcing Form</h3>
 <br/>
 <br/>
-
-<p><strong>Comment: </strong></p>
-<p th:text="${comment}"></p>
-<p><strong>Ticket Code: </strong></p>
-<a th:href="${url}" th:text="${ticket_code}" />
-<p><strong>Request Item Id:</strong></p>
-<p th:text="${request_item_id}"></p>
-<p><strong>Created Date & Time:</strong> </p>
-<p th:text="${created_datetime}"></p>
+    <p><strong>Link: </strong></p>
+    <p th:text="${link}"></p>
 </body>
 </html>
